--- a/Practicum_2.2_Opdrachten.ipynb
+++ b/Practicum_2.2_Opdrachten.ipynb
@@ -135,54 +135,260 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Connected to sqlite.\n",
-      "    SALES_STAFF_CODE FIRST_NAME   LAST_NAME                   POSITION_EN  \\\n",
-      "0                100     Tuomas  Savolainen  Level 2 Sales Representative   \n",
-      "1                101   Chang-ho         Kim  Level 2 Sales Representative   \n",
-      "2                102    Jung-ho        Choi  Level 3 Sales Representative   \n",
-      "3                103  Kwei-Ping         Kao  Level 2 Sales Representative   \n",
-      "4                104  Chin-Tsai        Fang  Level 3 Sales Representative   \n",
-      "..               ...        ...         ...                           ...   \n",
-      "97                95      Tomás    Iglesias  Level 2 Sales Representative   \n",
-      "98                96     Bayard       Lopes                Branch Manager   \n",
-      "99                97     Viviam      Barros  Level 3 Sales Representative   \n",
-      "100               98    Eduardo   Guimarães  Level 2 Sales Representative   \n",
-      "101               99     Helena    Lindholm  Level 3 Sales Representative   \n",
-      "\n",
-      "              WORK_PHONE EXTENSION                  FAX  \\\n",
-      "0    +358(0)17 - 433 127       825  +358(0)17 - 433 129   \n",
-      "1          82-2-778-6587      1228        82-2-778-6586   \n",
-      "2          82-2-778-6587      2641        82-2-778-6586   \n",
-      "3        886-2-2975-1988      1541      886-2-2989-4978   \n",
-      "4        886-2-2975-1988      2311      886-2-2989-4978   \n",
-      "..                   ...       ...                  ...   \n",
-      "97       +35 94 322 3540       325      +35 91 548 1637   \n",
-      "98     +55 (11) 344-4444      3490    +55 (11) 333-2223   \n",
-      "99     +55 (11) 344-4444      3364    +55 (11) 333-2223   \n",
-      "100    +55 (11) 344-4444      1442    +55 (11) 333-2223   \n",
-      "101  +358(0)17 - 433 127       489  +358(0)17 - 433 129   \n",
-      "\n",
-      "                       EMAIL  DATE_HIRED SALES_BRANCH_CODE TRIAL888  \n",
-      "0    TSavolainen@grtd123.com   23-7-2014                31        T  \n",
-      "1           CKim@grtd123.com  15-12-2014                32        T  \n",
-      "2          JChoi@grtd123.com  27-11-2014                32        T  \n",
-      "3          KKwao@grtd123.com   7-10-2014                33        T  \n",
-      "4           CFon@grtd123.com    8-5-2012                33        T  \n",
-      "..                       ...         ...               ...      ...  \n",
-      "97     TIglesias@grtd123.com   19-2-2014                29        T  \n",
-      "98        BLopes@grtd123.com   12-8-2013                30        T  \n",
-      "99       VBarros@grtd123.com   10-2-2017                30        T  \n",
-      "100   EGuimaraes@grtd123.com   14-2-2015                30        T  \n",
-      "101    HLindholm@grtd123.com   17-8-2013                31        T  \n",
-      "\n",
-      "[102 rows x 11 columns]\n",
+      "Connected to sqlite.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>SALES_STAFF_CODE</th>\n",
+       "      <th>FIRST_NAME</th>\n",
+       "      <th>LAST_NAME</th>\n",
+       "      <th>POSITION_EN</th>\n",
+       "      <th>WORK_PHONE</th>\n",
+       "      <th>EXTENSION</th>\n",
+       "      <th>FAX</th>\n",
+       "      <th>EMAIL</th>\n",
+       "      <th>DATE_HIRED</th>\n",
+       "      <th>SALES_BRANCH_CODE</th>\n",
+       "      <th>TRIAL888</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>100</td>\n",
+       "      <td>Tuomas</td>\n",
+       "      <td>Savolainen</td>\n",
+       "      <td>Level 2 Sales Representative</td>\n",
+       "      <td>+358(0)17 - 433 127</td>\n",
+       "      <td>825</td>\n",
+       "      <td>+358(0)17 - 433 129</td>\n",
+       "      <td>TSavolainen@grtd123.com</td>\n",
+       "      <td>23-7-2014</td>\n",
+       "      <td>31</td>\n",
+       "      <td>T</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>101</td>\n",
+       "      <td>Chang-ho</td>\n",
+       "      <td>Kim</td>\n",
+       "      <td>Level 2 Sales Representative</td>\n",
+       "      <td>82-2-778-6587</td>\n",
+       "      <td>1228</td>\n",
+       "      <td>82-2-778-6586</td>\n",
+       "      <td>CKim@grtd123.com</td>\n",
+       "      <td>15-12-2014</td>\n",
+       "      <td>32</td>\n",
+       "      <td>T</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>102</td>\n",
+       "      <td>Jung-ho</td>\n",
+       "      <td>Choi</td>\n",
+       "      <td>Level 3 Sales Representative</td>\n",
+       "      <td>82-2-778-6587</td>\n",
+       "      <td>2641</td>\n",
+       "      <td>82-2-778-6586</td>\n",
+       "      <td>JChoi@grtd123.com</td>\n",
+       "      <td>27-11-2014</td>\n",
+       "      <td>32</td>\n",
+       "      <td>T</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>103</td>\n",
+       "      <td>Kwei-Ping</td>\n",
+       "      <td>Kao</td>\n",
+       "      <td>Level 2 Sales Representative</td>\n",
+       "      <td>886-2-2975-1988</td>\n",
+       "      <td>1541</td>\n",
+       "      <td>886-2-2989-4978</td>\n",
+       "      <td>KKwao@grtd123.com</td>\n",
+       "      <td>7-10-2014</td>\n",
+       "      <td>33</td>\n",
+       "      <td>T</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>104</td>\n",
+       "      <td>Chin-Tsai</td>\n",
+       "      <td>Fang</td>\n",
+       "      <td>Level 3 Sales Representative</td>\n",
+       "      <td>886-2-2975-1988</td>\n",
+       "      <td>2311</td>\n",
+       "      <td>886-2-2989-4978</td>\n",
+       "      <td>CFon@grtd123.com</td>\n",
+       "      <td>8-5-2012</td>\n",
+       "      <td>33</td>\n",
+       "      <td>T</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>97</th>\n",
+       "      <td>95</td>\n",
+       "      <td>Tomás</td>\n",
+       "      <td>Iglesias</td>\n",
+       "      <td>Level 2 Sales Representative</td>\n",
+       "      <td>+35 94 322 3540</td>\n",
+       "      <td>325</td>\n",
+       "      <td>+35 91 548 1637</td>\n",
+       "      <td>TIglesias@grtd123.com</td>\n",
+       "      <td>19-2-2014</td>\n",
+       "      <td>29</td>\n",
+       "      <td>T</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>98</th>\n",
+       "      <td>96</td>\n",
+       "      <td>Bayard</td>\n",
+       "      <td>Lopes</td>\n",
+       "      <td>Branch Manager</td>\n",
+       "      <td>+55 (11) 344-4444</td>\n",
+       "      <td>3490</td>\n",
+       "      <td>+55 (11) 333-2223</td>\n",
+       "      <td>BLopes@grtd123.com</td>\n",
+       "      <td>12-8-2013</td>\n",
+       "      <td>30</td>\n",
+       "      <td>T</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99</th>\n",
+       "      <td>97</td>\n",
+       "      <td>Viviam</td>\n",
+       "      <td>Barros</td>\n",
+       "      <td>Level 3 Sales Representative</td>\n",
+       "      <td>+55 (11) 344-4444</td>\n",
+       "      <td>3364</td>\n",
+       "      <td>+55 (11) 333-2223</td>\n",
+       "      <td>VBarros@grtd123.com</td>\n",
+       "      <td>10-2-2017</td>\n",
+       "      <td>30</td>\n",
+       "      <td>T</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>100</th>\n",
+       "      <td>98</td>\n",
+       "      <td>Eduardo</td>\n",
+       "      <td>Guimarães</td>\n",
+       "      <td>Level 2 Sales Representative</td>\n",
+       "      <td>+55 (11) 344-4444</td>\n",
+       "      <td>1442</td>\n",
+       "      <td>+55 (11) 333-2223</td>\n",
+       "      <td>EGuimaraes@grtd123.com</td>\n",
+       "      <td>14-2-2015</td>\n",
+       "      <td>30</td>\n",
+       "      <td>T</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>101</th>\n",
+       "      <td>99</td>\n",
+       "      <td>Helena</td>\n",
+       "      <td>Lindholm</td>\n",
+       "      <td>Level 3 Sales Representative</td>\n",
+       "      <td>+358(0)17 - 433 127</td>\n",
+       "      <td>489</td>\n",
+       "      <td>+358(0)17 - 433 129</td>\n",
+       "      <td>HLindholm@grtd123.com</td>\n",
+       "      <td>17-8-2013</td>\n",
+       "      <td>31</td>\n",
+       "      <td>T</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>102 rows × 11 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    SALES_STAFF_CODE FIRST_NAME   LAST_NAME                   POSITION_EN  \\\n",
+       "0                100     Tuomas  Savolainen  Level 2 Sales Representative   \n",
+       "1                101   Chang-ho         Kim  Level 2 Sales Representative   \n",
+       "2                102    Jung-ho        Choi  Level 3 Sales Representative   \n",
+       "3                103  Kwei-Ping         Kao  Level 2 Sales Representative   \n",
+       "4                104  Chin-Tsai        Fang  Level 3 Sales Representative   \n",
+       "..               ...        ...         ...                           ...   \n",
+       "97                95      Tomás    Iglesias  Level 2 Sales Representative   \n",
+       "98                96     Bayard       Lopes                Branch Manager   \n",
+       "99                97     Viviam      Barros  Level 3 Sales Representative   \n",
+       "100               98    Eduardo   Guimarães  Level 2 Sales Representative   \n",
+       "101               99     Helena    Lindholm  Level 3 Sales Representative   \n",
+       "\n",
+       "              WORK_PHONE EXTENSION                  FAX  \\\n",
+       "0    +358(0)17 - 433 127       825  +358(0)17 - 433 129   \n",
+       "1          82-2-778-6587      1228        82-2-778-6586   \n",
+       "2          82-2-778-6587      2641        82-2-778-6586   \n",
+       "3        886-2-2975-1988      1541      886-2-2989-4978   \n",
+       "4        886-2-2975-1988      2311      886-2-2989-4978   \n",
+       "..                   ...       ...                  ...   \n",
+       "97       +35 94 322 3540       325      +35 91 548 1637   \n",
+       "98     +55 (11) 344-4444      3490    +55 (11) 333-2223   \n",
+       "99     +55 (11) 344-4444      3364    +55 (11) 333-2223   \n",
+       "100    +55 (11) 344-4444      1442    +55 (11) 333-2223   \n",
+       "101  +358(0)17 - 433 127       489  +358(0)17 - 433 129   \n",
+       "\n",
+       "                       EMAIL  DATE_HIRED SALES_BRANCH_CODE TRIAL888  \n",
+       "0    TSavolainen@grtd123.com   23-7-2014                31        T  \n",
+       "1           CKim@grtd123.com  15-12-2014                32        T  \n",
+       "2          JChoi@grtd123.com  27-11-2014                32        T  \n",
+       "3          KKwao@grtd123.com   7-10-2014                33        T  \n",
+       "4           CFon@grtd123.com    8-5-2012                33        T  \n",
+       "..                       ...         ...               ...      ...  \n",
+       "97     TIglesias@grtd123.com   19-2-2014                29        T  \n",
+       "98        BLopes@grtd123.com   12-8-2013                30        T  \n",
+       "99       VBarros@grtd123.com   10-2-2017                30        T  \n",
+       "100   EGuimaraes@grtd123.com   14-2-2015                30        T  \n",
+       "101    HLindholm@grtd123.com   17-8-2013                31        T  \n",
+       "\n",
+       "[102 rows x 11 columns]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "The SQLite connection is now closed.\n"
      ]
     }
@@ -196,7 +402,7 @@
     "        con = sqlite3.connect(\"Assets/Week 2/go_sales.sqlite\")\n",
     "        print(\"Connected to sqlite.\")\n",
     "        result = pd.read_sql_query(sql_query,con)\n",
-    "        print(result)\n",
+    "        display(result)\n",
     "        global original_result\n",
     "        original_result = result\n",
     "    except sqlite3.Error as error: \n",
@@ -1027,7 +1233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1062,8 +1268,6 @@
        "      <th>DATE_HIRED</th>\n",
        "      <th>SALES_BRANCH_CODE</th>\n",
        "      <th>TRIAL888</th>\n",
-       "      <th>FULL_NAME</th>\n",
-       "      <th>MAIL</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1080,8 +1284,6 @@
        "      <td>23-7-2014</td>\n",
        "      <td>31</td>\n",
        "      <td>T</td>\n",
-       "      <td>Tuomas Savolainen</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -1096,8 +1298,6 @@
        "      <td>15-12-2014</td>\n",
        "      <td>32</td>\n",
        "      <td>T</td>\n",
-       "      <td>Chang-ho Kim</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -1112,8 +1312,6 @@
        "      <td>27-11-2014</td>\n",
        "      <td>32</td>\n",
        "      <td>T</td>\n",
-       "      <td>Jung-ho Choi</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -1128,8 +1326,6 @@
        "      <td>7-10-2014</td>\n",
        "      <td>33</td>\n",
        "      <td>T</td>\n",
-       "      <td>Kwei-Ping Kao</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -1144,13 +1340,9 @@
        "      <td>8-5-2012</td>\n",
        "      <td>33</td>\n",
        "      <td>T</td>\n",
-       "      <td>Chin-Tsai Fang</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -1176,8 +1368,6 @@
        "      <td>12-8-2013</td>\n",
        "      <td>30</td>\n",
        "      <td>T</td>\n",
-       "      <td>Bayard Lopes</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>99</th>\n",
@@ -1192,8 +1382,6 @@
        "      <td>10-2-2017</td>\n",
        "      <td>30</td>\n",
        "      <td>T</td>\n",
-       "      <td>Viviam Barros</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>100</th>\n",
@@ -1208,8 +1396,6 @@
        "      <td>14-2-2015</td>\n",
        "      <td>30</td>\n",
        "      <td>T</td>\n",
-       "      <td>Eduardo Guimarães</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>101</th>\n",
@@ -1224,8 +1410,6 @@
        "      <td>17-8-2013</td>\n",
        "      <td>31</td>\n",
        "      <td>T</td>\n",
-       "      <td>Helena Lindholm</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>102</th>\n",
@@ -1236,16 +1420,14 @@
        "      <td>0612345678</td>\n",
        "      <td>9876</td>\n",
        "      <td>+(44) 181 5030282</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>HWilloughby@grtd123.com</td>\n",
        "      <td>10-2-2016</td>\n",
        "      <td>39</td>\n",
        "      <td>T</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>HWilloughby@grtd123.com</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>103 rows × 13 columns</p>\n",
+       "<p>103 rows × 11 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -1286,22 +1468,22 @@
        "99     +55 (11) 333-2223      VBarros@grtd123.com   10-2-2017   \n",
        "100    +55 (11) 333-2223   EGuimaraes@grtd123.com   14-2-2015   \n",
        "101  +358(0)17 - 433 129    HLindholm@grtd123.com   17-8-2013   \n",
-       "102    +(44) 181 5030282                      NaN   10-2-2016   \n",
+       "102    +(44) 181 5030282  HWilloughby@grtd123.com   10-2-2016   \n",
        "\n",
-       "    SALES_BRANCH_CODE TRIAL888          FULL_NAME                     MAIL  \n",
-       "0                  31        T  Tuomas Savolainen                      NaN  \n",
-       "1                  32        T       Chang-ho Kim                      NaN  \n",
-       "2                  32        T       Jung-ho Choi                      NaN  \n",
-       "3                  33        T      Kwei-Ping Kao                      NaN  \n",
-       "4                  33        T     Chin-Tsai Fang                      NaN  \n",
-       "..                ...      ...                ...                      ...  \n",
-       "98                 30        T       Bayard Lopes                      NaN  \n",
-       "99                 30        T      Viviam Barros                      NaN  \n",
-       "100                30        T  Eduardo Guimarães                      NaN  \n",
-       "101                31        T    Helena Lindholm                      NaN  \n",
-       "102                39        T                NaN  HWilloughby@grtd123.com  \n",
+       "    SALES_BRANCH_CODE TRIAL888  \n",
+       "0                  31        T  \n",
+       "1                  32        T  \n",
+       "2                  32        T  \n",
+       "3                  33        T  \n",
+       "4                  33        T  \n",
+       "..                ...      ...  \n",
+       "98                 30        T  \n",
+       "99                 30        T  \n",
+       "100                30        T  \n",
+       "101                31        T  \n",
+       "102                39        T  \n",
        "\n",
-       "[103 rows x 13 columns]"
+       "[103 rows x 11 columns]"
       ]
      },
      "metadata": {},
@@ -1321,7 +1503,7 @@
     "    \"WORK_PHONE\":[\"0612345678\"],\n",
     "    \"EXTENSION\":[\"9876\"],\n",
     "    \"FAX\":[\"+(44) 181 5030282\"], \n",
-    "    \"MAIL\":[\"HWilloughby@grtd123.com\"],\n",
+    "    \"EMAIL\":[\"HWilloughby@grtd123.com\"],\n",
     "    \"DATE_HIRED\":[\"10-2-2016\"], \n",
     "    \"SALES_BRANCH_CODE\":[\"39\"], \n",
     "    \"TRIAL888\":[\"T\"]  }\n",
