--- a/Week 4/Practicum_4.3_Opdracht_A-Delgado.ipynb
+++ b/Week 4/Practicum_4.3_Opdracht_A-Delgado.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 410,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,16 +37,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 411,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pyodbc.Cursor at 0x1be8f66b5b0>"
+       "<pyodbc.Cursor at 0x21fad555130>"
       ]
      },
-     "execution_count": 411,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -59,7 +59,7 @@
     "database = 'GreatOutdoorsDW'\n",
     "\n",
     "DB = {\n",
-    "    'servername': desktop,\n",
+    "    'servername': laptop,\n",
     "    'database' : database\n",
     "}\n",
     "\n",
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 412,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 413,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 414,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 415,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 416,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
@@ -512,14 +512,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 417,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Anthony Delgado\\AppData\\Local\\Temp\\ipykernel_1512\\1536311232.py:12: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
+      "C:\\Users\\arcde\\AppData\\Local\\Temp\\ipykernel_15224\\1536311232.py:12: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
       "  go_staff_staff[\"DATE_HIRED\"] = pd.to_datetime(go_staff_staff[\"DATE_HIRED\"])\n"
      ]
     },
@@ -741,16 +741,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 418,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Anthony Delgado\\AppData\\Local\\Temp\\ipykernel_1512\\933722837.py:34: UserWarning: Parsing dates in %d-%m-%Y format when dayfirst=False (the default) was specified. Pass `dayfirst=True` or specify a format to silence this warning.\n",
+      "C:\\Users\\arcde\\AppData\\Local\\Temp\\ipykernel_15224\\933722837.py:34: UserWarning: Parsing dates in %d-%m-%Y format when dayfirst=False (the default) was specified. Pass `dayfirst=True` or specify a format to silence this warning.\n",
       "  product[\"INTRODUCTION_DATE\"] = pd.to_datetime(product[\"INTRODUCTION_DATE\"])\n",
-      "C:\\Users\\Anthony Delgado\\AppData\\Local\\Temp\\ipykernel_1512\\933722837.py:54: UserWarning: Parsing dates in %d-%m-%Y format when dayfirst=False (the default) was specified. Pass `dayfirst=True` or specify a format to silence this warning.\n",
+      "C:\\Users\\arcde\\AppData\\Local\\Temp\\ipykernel_15224\\933722837.py:54: UserWarning: Parsing dates in %d-%m-%Y format when dayfirst=False (the default) was specified. Pass `dayfirst=True` or specify a format to silence this warning.\n",
       "  sales_staff[\"DATE_HIRED\"] = pd.to_datetime(sales_staff[\"DATE_HIRED\"])\n"
      ]
     },
@@ -1027,7 +1027,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 419,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1061,7 +1061,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 420,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
@@ -1349,7 +1349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 421,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
@@ -1648,7 +1648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 422,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
@@ -2129,7 +2129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 423,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
@@ -2603,7 +2603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 424,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -2702,7 +2702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 425,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
@@ -2813,7 +2813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 426,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
@@ -2993,7 +2993,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 427,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
@@ -3384,7 +3384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 428,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
@@ -3609,7 +3609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 429,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
@@ -3826,7 +3826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 430,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
@@ -3992,7 +3992,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 431,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
@@ -4158,7 +4158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 432,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4176,7 +4176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 433,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [
     {
@@ -4370,12 +4370,12 @@
     "            f\"(ORDER_NUMBER_PK,ORDER_DETAIL_CODE_PK,ORDER_DETAILS_QUANTITY, PRODUCT_NUMBER,\tORDER_DETAILS_UNIT_COST,\"\n",
     "            f\"ORDER_DETAILS_UNIT_PRICE,\tORDER_DETAILS_UNIT_SALE_PRICE,\tORDER_DETAILS_DISCOUNT_PERCENTAGE,\"\n",
     "            f\"ORDER_DETAILS_TURNOVER,ORDER_DETAILS_PROFIT,ORDER_DATE,SALES_BRANCH_CODE_FK,\"\n",
-    "            f\"RETAILER_SITE_CODE,RETAILER_SITE_CONTACT)\"\n",
+    "            f\"RETAILER_SITE_CODE,RETAILER_SITE_CONTACT, ORDER_METHOD_CODE_PK)\"\n",
     "            f\"VALUES\"\n",
     "            f\"({row[\"ORDER_NUMBER\"]},{row[\"ORDER_DETAIL_CODE\"]},{row[\"QUANTITY\"]},{row[\"PRODUCT_NUMBER\"]},{row[\"UNIT_COST\"]},\"\n",
     "            f\"{row[\"UNIT_PRICE\"]},{row[\"UNIT_SALE_PRICE\"]},{row[\"DISCOUNT_PERCENTAGE\"]},\"\n",
     "            f\"{row[\"TURNOVER\"]},{row[\"PROFIT\"]},'{row[\"ORDER_DATE\"]}',{row[\"SALES_BRANCH_CODE\"]},\"\n",
-    "            f\"{row[\"RETAILER_SITE_CODE\"]},{row[\"RETAILER_CONTACT_CODE\"]})\"\n",
+    "            f\"{row[\"RETAILER_SITE_CODE\"]},{row[\"RETAILER_CONTACT_CODE\"]}, {row[\"ORDER_METHOD_CODE\"]})\"\n",
     "                 )\n",
     "        export_cursor.execute(query)\n",
     "    except pyodbc.Error:\n",
@@ -4436,7 +4436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 434,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [],
    "source": [
